<package>
  <name>im920teleop</name>
  <version>0.0.1</version>
  <description>IM920 teleoperation</description>
  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>

  <author>Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
